Fix icon v-align

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,10 @@ a {
   }
 }
 
+.icon {
+  vertical-align: middle;
+}
+
 .avatar {
   display: table;
   width: 150px;
